# NNx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI_README.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  release-please-config.json  requirements-tools.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml  security.yml
.maintenance/: overnight-2026-07-01.md  overnight-2026-07-22.md
docs/: api.md  architecture.html  architecture.md  comparison.md  concepts.md  dpo.md  embeddings.md  external-contracts.md  gguf.md  hub.md  index.md  jepa.md  lm.md  manifest.yaml  quickstart.md  surgery.md
docs/diagrams/: docs-projection.html  training-lifecycle.html
docs/stylesheets/: extra.css
examples/: 01_synthetic_classification.py  02_resume_training.py  03_custom_metrics.py  04_onnx_export.py  05_custom_train_step_autoencoder.py  06_finetune_with_layer_freezing.py  07_lora_finetuning.py  08_diffusion_2d_mixture.py  09_gan_with_trainer.py  10_knowledge_distillation.py  11_tinystories_lm.py  12_quantize_int8.py  13_train_domain_embedder.py  14_moe_classifier.py  15_qat_classifier.py  16_ijepa_cifar10.py  16_ijepa_image_plumbing.py  17_export_transformer_to_gguf.py  18_export_ollama_bundle.py  18_publish_to_ollama.py  19_prune_mnist.py  19_prune_synthetic_classifier.py  20_low_rank_surgery_ffn.py  20_surgery_resnet.py  21_viz_attribute_xai.py  22_dpo_synthetic_preferences.py  22_dpo_tinystories.py  23_born_again_distillation.py  24_feature_kd.py  25_conv_classifier.py  26_custom_eval_step.py  README.md
scripts/: __init__.py  normalize_sdist.py
scripts/docs/: __init__.py  build_docs.py  build_pypi_readme.py  build_wiki.py  extract_architecture_svg.py  mkdocs_hooks.py  push_wiki.py
src/nnx/: __init__.py  _metrics.py  _step_helpers.py  lr_finder.py  seeding.py  utils.py  vis_utils.py
src/nnx/diffusion/: __init__.py  nets.py  sampling.py  schedules.py  training.py
src/nnx/embeddings/: __init__.py  contrastive_trainer.py  faiss_export.py
src/nnx/finetune/: __init__.py  freezing.py  loading.py  param_groups.py
src/nnx/generation/: __init__.py  logits_chain.py  logits_processors.py  sampling.py
src/nnx/interop/: __init__.py  ollama.py
src/nnx/interop/gguf/: __init__.py  tensor_name_map.py  writer.py
src/nnx/nn/: __init__.py  callbacks.py  generative_nn_model.py  moe.py  nn_model.py
src/nnx/nn/dataset/: nn_dataset.py  nn_dataset_base.py  nn_graph_dataset.py  nn_preference_dataset.py  nn_tabular_dataset.py
src/nnx/nn/enum/: activations.py  checkpoints.py  devices.py  losses.py  nets.py  optims.py  schedulers.py
src/nnx/nn/net/: conv_nn.py  feed_fwd_moe_nn.py  feed_fwd_nn.py  graph_att_nn.py  graph_conv_nn.py  graph_nn_base.py  graph_sage_nn.py  transformer_layers.py  transformer_nn.py  vit_nn.py
src/nnx/nn/params/: nn_checkpoint.py  nn_conv_params.py  nn_evaluation_data_point.py  nn_iteration_data_point.py  nn_model_params.py  nn_moe_params.py  nn_optim_params.py  nn_optim_params_builder.py  nn_params.py  nn_run.py  nn_scheduler_params.py  nn_scheduler_params_builder.py  nn_tokenizer_params.py  nn_train_params.py  nn_transformer_params.py  nn_transformer_params_builder.py
src/nnx/paradigms/: __init__.py  augmentation.py  born_again.py  contrastive.py  distillation.py  dpo.py  jepa.py  moe.py
src/nnx/peft/: __init__.py  _source.py  adapters.py  dora.py  ia3.py  lora.py  prefix.py  prompt.py
src/nnx/prune/: __init__.py  magnitude.py  semi_structured.py
src/nnx/quantize/: __init__.py  ptq.py  qat.py
src/nnx/surgery/: __init__.py  _utils.py  deepen.py  drop_layer.py  embedding.py  low_rank.py  widen.py
src/nnx/trainer/: __init__.py  params.py  params_builder.py  trainer.py
src/nnx/viz/: __init__.py  activation.py  attribute.py  gradient_flow.py  netron.py  summary.py  weight_histogram.py
tests/: README.md  conftest.py  test_callbacks.py  test_checkpoint_safetensors.py  test_confusion_matrix.py  test_conv_nn.py  test_diffusion_nets.py  test_diffusion_sampling.py  test_diffusion_schedules.py  test_diffusion_training.py  test_doc_snippets.py  test_docs_projection.py  test_embeddings_contrastive.py  test_embeddings_faiss_export.py  test_eval_step_fn.py  test_examples_smoke.py  test_feed_fwd_moe.py  test_finetune_freezing.py  test_finetune_loading.py  test_finetune_param_groups.py  test_generation_sampling.py  test_generative_nn_model.py  test_graph_nn_base.py  test_hub_mixin.py  test_imports.py  test_inference_helpers_preserve_training_mode.py  test_interop_gguf_writer.py  test_iteration_data_point.py  test_logits_chain.py  test_losses.py  test_lr_finder.py  test_metrics.py  test_net_param_compatibility.py  test_nets.py  test_nn_dataset.py  test_nn_graph_dataset.py  test_nn_graph_dataset_full_batch.py  test_nn_moe.py  test_nn_optim_params_builder.py  test_nn_run_repr_html.py  (+60 more)
