[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnx"
version = "0.1.0"
description = "Lightweight PyTorch training/eval/visualization toolkit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "pytorch", "deep-learning", "graph-neural-networks", "training",
    "checkpointing", "callbacks", "experiments", "reproducibility",
    "neural-networks", "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "torch_geometric>=2.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "plotly>=5.18",
    "prettytable>=3.9",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "ipython>=8.0",
]
# Removed from `dependencies`:
#   * `scipy` — not imported anywhere in src/tests/examples; still
#     installed transitively via scikit-learn.
#   * `kaleido` — plotly's static-image export backend. We never call
#     `fig.write_image` / `fig.to_image`; only `fig.show()` which needs
#     no kaleido. Users who want static export can `pip install kaleido`.
# `ipython` is kept as a core dep for now (used lazily by the legacy
# callback path); revisit if anyone wants a smaller minimal install.

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    # Pinned upper bound: ruff regularly adds new lint/format rules
    # between minor versions; without a ceiling, a fresh `pip install -e
    # .[dev]` six months from now can fail CI on rules that didn't
    # exist when the codebase was written.
    "ruff>=0.6,<0.10",
    "pyright>=1.1.380",    # CI runs `pyright --warnings`; pin here so locals match
    "tensorboard>=2.15",   # exercises TensorBoardCallback path in tests
    "onnx>=1.15",          # exercises NNModel.to_onnx in tests
]
tensorboard = ["tensorboard>=2.15"]
wandb = ["wandb>=0.16"]
onnx = ["onnx>=1.15"]
viz = ["torchinfo>=1.8.0"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/thekaveh/NNx"
Repository = "https://github.com/thekaveh/NNx"
Documentation = "https://thekaveh.github.io/NNx/"
Changelog = "https://github.com/thekaveh/NNx/blob/main/CHANGELOG.md"
Issues = "https://github.com/thekaveh/NNx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E/F/W catch core style + pyflakes errors. B adds bugbear (mutable defaults,
# common foot-guns). I keeps imports ordered. UP nudges toward modern Python
# 3.10+ syntax.
select = ["E", "F", "W", "B", "I", "UP"]
ignore = [
    "E501",  # line too long — large library, gradual cleanup
    "E701",  # multiple statements on one line (colon) — keep `case X: return Y` style
    "E731",  # lambda assignment
    "E741",  # ambiguous var name (e.g., `l`)
    "B008",  # function calls in argument defaults — dataclass field defaults are fine here
    "B024",  # ABC with no abstract methods — NNDatasetBase is a structural base
    "UP007", # Optional[X] vs X | None — keep Optional for readability
    "UP045", # Optional[X] vs X | None in annotations (same as UP007)
    "UP038", # isinstance(x, (A, B)) vs isinstance(x, A | B) — the tuple form
             # reuses a static tuple at runtime; the union form constructs a
             # new types.UnionType each call. ruff itself deprecated this
             # rule in 0.11 for that reason — opt out explicitly so the
             # 0.6-0.10 pin range doesn't trip on it.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    # Upstream deprecations we can't act on — silenced so pytest output
    # stays focused on nnx-relevant warnings.
    "ignore:`torch_geometric.distributed` has been deprecated:DeprecationWarning",
    # `torch.jit.script` is fired transitively by `torch.onnx.export`'s
    # legacy TorchScript path (and by some torchvision / pyg transforms).
    # No first-party `torch.jit.script` usage in nnx; this filter exists
    # purely to keep pytest output focused on nnx-relevant warnings.
    "ignore:`torch.jit.script` is deprecated:DeprecationWarning",
    # `torch.onnx.export` legacy TorchScript path emits a DeprecationWarning
    # in torch >= 2.8. Switching to the dynamo-based exporter requires the
    # `onnxscript` dep — tracked separately; for now we keep the legacy path
    # and silence the noise so pytest output stays focused.
    "ignore:You are using the legacy TorchScript-based ONNX export.*:DeprecationWarning",
    "ignore:The feature will be removed.*:DeprecationWarning:torch.onnx",
]
